traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:4: error: Boolean does not take parameters
  while (posfinal() == false){
                 ^TraversalZigZag:11: error: not found: value finalPos
        finalPos=true
        ^TraversalZigZag:16: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
          counter + = 1
                  ^TraversalZigZag:18: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
      y + = 1
        ^TraversalZigZag:23: error: not found: value finalPos
        finalPos=true
        ^TraversalZigZag:28: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
          counter + = 1
                  ^